--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <script>
    <script>
-const sheetUrl = 'YOUR_PUBLISHED_CSV_URL_HERE'; // replace with your CSV URL
+const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ-A6rGvaoyKbrYLSUha23bLWcucC4VnT9DW5YF2OuedUJBuQpGpjZ2r6rjY0bl8Q/pubhtml'; // replace with your CSV URL
 
 let wines = []; // store all wine data globally
 
