--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wine Inventory</title>
+  <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-50">
-  <div class="min-h-screen p-4 flex flex-col items-center">
+<body class="bg-gray-50 flex items-center justify-center min-h-screen">
+
+  <div class="w-full max-w-3xl p-4 flex flex-col items-center">
     <!-- Header -->
-    <header class="w-full max-w-3xl mb-6 text-center">
+    <header class="text-center mb-6">
       <h1 class="text-3xl font-bold text-gray-800">Wine Inventory</h1>
       <p class="text-gray-600 mt-1">Search by Wine Name or Producer</p>
     </header>
 
     <!-- Search Bar -->
-    <div class="w-full max-w-3xl mb-6">
+    <div class="w-full mb-6">
       <input
         id="search"
         type="text"
@@ -25,89 +26,95 @@
     </div>
 
     <!-- Cards Container -->
-    <div id="cards" class="w-full max-w-3xl grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-      <!-- JS will inject wine cards here -->
-    </div>
+    <div id="cards" class="w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 justify-items-center"></div>
   </div>
 
-   <script>
-const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ-A6rGvaoyKbrYLSUha23bLWcucC4VnT9DW5YF2OuedUJBuQpGpjZ2r6rjY0bl8Q/pub?output=csv'; // replace with your CSV URL
+  <!-- JS -->
+  <script>
+    const sheetUrl = 'YOUR_PUBLISHED_CSV_URL_HERE'; // replace with published CSV URL
 
-let wines = []; // store all wine data globally
+    let wines = [];
 
-async function loadData() {
-  const res = await fetch(sheetUrl);
-  const text = await res.text();
-  const rows = text.split('\n').slice(1); // skip header
-  wines = rows
-    .map(r => r.split(','))
-    .filter(d => d[0] && d[0].trim() !== '') // only rows with Wine Name
-    .map(d => ({
-      name: d[0],
-      producer: d[1],
-      vintage: d[2],
-      zone: d[3],
-      subZone: d[4],
-      priority: d[5],
-      notes: d[6]
-    }));
-  // Do NOT render all cards on page load
-}
+    async function loadData() {
+      try {
+        const res = await fetch(sheetUrl);
+        const text = await res.text();
 
-function renderCards(wineArray) {
-  const container = document.getElementById('cards');
-  container.innerHTML = '';
+        // Split rows, skip header
+        const rows = text.split('\n').slice(1);
 
-  if (!wineArray || wineArray.length === 0) {
-    const msg = document.createElement('p');
-    msg.className = 'text-center text-gray-500 italic col-span-full';
-    msg.textContent = 'No wines found';
-    container.appendChild(msg);
-    return;
-  }
-
-  wineArray.forEach(w => {
-    const card = document.createElement('div');
-    card.className = `p-4 rounded-lg shadow-md border border-gray-200 ${
-  w.priority.toLowerCase() === 'primary' ? 'bg-green-50' : 'bg-gray-100'
-}`;
-card.innerHTML = `
-  <h2 class="font-semibold text-lg text-gray-800">${w.name} (${w.vintage})</h2>
-  <p class="text-gray-700">${w.producer}</p>
-  <p class="italic text-gray-600 text-sm">${w.zone} → ${w.subZone}</p>
-  <p class="text-gray-700 mt-1">${w.notes}</p>
-`;
-
-    container.appendChild(card);
-  });
-}
-
-function setupSearch() {
-  const searchInput = document.getElementById('search');
-  searchInput.addEventListener('input', e => {
-    const term = e.target.value.toLowerCase().trim();
-
-    if (term === '') {
-      renderCards([]); // blank if search is empty
-      return;
+        wines = rows
+          .map(r => r.trim())
+          .filter(r => r) // skip empty rows
+          .map(r => r.split(',').map(c => c.replace(/^"|"$/g, '').trim())) // remove quotes
+          .filter(d => d[0]) // ensure Wine Name exists
+          .map(d => ({
+            name: d[0],
+            producer: d[1] || '',
+            vintage: d[2] || '',
+            zone: d[3] || '',
+            subZone: d[4] || '',
+            priority: d[5] || '',
+            notes: d[6] || ''
+          }));
+      } catch (err) {
+        console.error('Error fetching CSV:', err);
+      }
     }
 
-    const filtered = wines.filter(w =>
-      (w.name && w.name.toLowerCase().includes(term)) ||
-      (w.producer && w.producer.toLowerCase().includes(term))
-    );
+    function renderCards(arr) {
+      const container = document.getElementById('cards');
+      container.innerHTML = '';
 
-    renderCards(filtered);
-  });
-}
+      if (!arr.length) {
+        const msg = document.createElement('p');
+        msg.className = 'text-center text-gray-500 italic col-span-full';
+        msg.textContent = 'No wines found';
+        container.appendChild(msg);
+        return;
+      }
 
-// initialize
-async function init() {
-  await loadData();
-  setupSearch();
-}
+      arr.forEach(w => {
+        const card = document.createElement('div');
+        card.className = `p-4 rounded-lg shadow-md border border-gray-200 w-full max-w-xs ${
+          w.priority.toLowerCase() === 'primary' ? 'bg-green-50' : 'bg-gray-100'
+        }`;
+        card.innerHTML = `
+          <h2 class="font-semibold text-lg text-gray-800">${w.name} ${w.vintage ? '('+w.vintage+')' : ''}</h2>
+          <p class="text-gray-700">${w.producer}</p>
+          <p class="italic text-gray-600 text-sm">${w.zone} → ${w.subZone}</p>
+          <p class="text-gray-700 mt-1">${w.notes}</p>
+        `;
+        container.appendChild(card);
+      });
+    }
 
-init();
-</script>
+    function setupSearch() {
+      const searchInput = document.getElementById('search');
+      searchInput.addEventListener('input', e => {
+        const term = e.target.value.toLowerCase().trim();
+        if (!term) {
+          // no search term → clear cards
+          document.getElementById('cards').innerHTML = '';
+          return;
+        }
+
+        const filtered = wines.filter(w =>
+          w.name.toLowerCase().includes(term) || w.producer.toLowerCase().includes(term)
+        );
+        renderCards(filtered);
+      });
+    }
+
+    async function init() {
+      await loadData();
+      setupSearch();
+      // No initial render, cards remain hidden
+    }
+
+    init();
+  </script>
+
 </body>
 </html>
+
