--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- JS -->
   <script>
-    const sheetUrl = 'YOUR_PUBLISHED_CSV_URL_HERE'; // replace with published CSV URL
+    const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ-A6rGvaoyKbrYLSUha23bLWcucC4VnT9DW5YF2OuedUJBuQpGpjZ2r6rjY0bl8Q/pub?output=csv'; // replace with published CSV URL
 
     let wines = [];
 
