--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     <div id="cards" class="w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 justify-items-center"></div>
   </div>
 
-  <!-- JS -->
   <script>
-    const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ-A6rGvaoyKbrYLSUha23bLWcucC4VnT9DW5YF2OuedUJBuQpGpjZ2r6rjY0bl8Q/pub?output=csv'; // replace with published CSV URL
+    const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ-A6rGvaoyKbrYLSUha23bLWcucC4VnT9DW5YF2OuedUJBuQpGpjZ2r6rjY0bl8Q/pub?output=csv'; // Replace this with your published CSV link
 
     let wines = [];
 
@@ -40,33 +39,31 @@
         const res = await fetch(sheetUrl);
         const text = await res.text();
 
-        // Split rows, skip header
-        const rows = text.split('\n').slice(1);
+        // Split into rows, skip empty and header
+        const rows = text.split('\n').slice(1).filter(r => r.trim());
 
-        wines = rows
-          .map(r => r.trim())
-          .filter(r => r) // skip empty rows
-          .map(r => r.split(',').map(c => c.replace(/^"|"$/g, '').trim())) // remove quotes
-          .filter(d => d[0]) // ensure Wine Name exists
-          .map(d => ({
-            name: d[0],
-            producer: d[1] || '',
-            vintage: d[2] || '',
-            zone: d[3] || '',
-            subZone: d[4] || '',
-            priority: d[5] || '',
-            notes: d[6] || ''
-          }));
+        wines = rows.map(r => {
+          const cols = r.split(',').map(c => c.replace(/^"|"$/g,'').trim());
+          return {
+            name: cols[0] || '',
+            producer: cols[1] || '',
+            vintage: cols[2] || '',
+            zone: cols[3] || '',
+            subZone: cols[4] || '',
+            priority: cols[5] || '',
+            notes: cols[6] || ''
+          };
+        }).filter(w => w.name); // skip rows without a name
       } catch (err) {
-        console.error('Error fetching CSV:', err);
+        console.error('CSV fetch error:', err);
       }
     }
 
-    function renderCards(arr) {
+    function renderCards(results) {
       const container = document.getElementById('cards');
       container.innerHTML = '';
 
-      if (!arr.length) {
+      if (!results.length) {
         const msg = document.createElement('p');
         msg.className = 'text-center text-gray-500 italic col-span-full';
         msg.textContent = 'No wines found';
@@ -74,7 +71,7 @@
         return;
       }
 
-      arr.forEach(w => {
+      results.forEach(w => {
         const card = document.createElement('div');
         card.className = `p-4 rounded-lg shadow-md border border-gray-200 w-full max-w-xs ${
           w.priority.toLowerCase() === 'primary' ? 'bg-green-50' : 'bg-gray-100'
@@ -90,31 +87,10 @@
     }
 
     function setupSearch() {
-      const searchInput = document.getElementById('search');
-      searchInput.addEventListener('input', e => {
+      const input = document.getElementById('search');
+      input.addEventListener('input', e => {
         const term = e.target.value.toLowerCase().trim();
         if (!term) {
-          // no search term → clear cards
+          // No term → hide cards
           document.getElementById('cards').innerHTML = '';
-          return;
-        }
-
-        const filtered = wines.filter(w =>
-          w.name.toLowerCase().includes(term) || w.producer.toLowerCase().includes(term)
-        );
-        renderCards(filtered);
-      });
-    }
-
-    async function init() {
-      await loadData();
-      setupSearch();
-      // No initial render, cards remain hidden
-    }
-
-    init();
-  </script>
-
-</body>
-</html>
-
+          r
