--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wine Inventory</title>
+  <title>Porter's Wine Map</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
@@ -16,7 +16,7 @@
     .tab-active{ background: rgba(59,130,246,.22); border-color: rgba(59,130,246,.55); }
     .pill{
       border-radius: 999px;
-      padding: .7rem 1.0rem;
+      padding: .62rem 0.9rem;
       font-weight: 800;
       line-height: 1.15;
       white-space: normal;
@@ -49,8 +49,8 @@
   <div class="w-full max-w-3xl px-4 pt-6">
     <div class="flex items-center justify-between gap-3">
       <div>
-        <h1 class="text-2xl font-black tracking-tight">Wine Inventory</h1>
-        <p class="text-slate-400 text-sm mt-0.5">Storage-first lookup + edits</p>
+        <h1 class="text-2xl font-black tracking-tight">Porters Wine Storage</h1>
+        <p class="text-slate-400 text-sm mt-0.5">All in One Storage Solution</p>
       </div>
 
       <div class="flex items-center gap-2">
@@ -58,7 +58,7 @@
           Add Wine
         </button>
         <button id="challengeBtn" class="bg-blue-600 hover:bg-blue-500 px-3 py-2 rounded-lg text-sm font-semibold">
-          Challenge
+          Challenge Bottle
         </button>
       </div>
     </div>
