--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <button id="homeBtn" class="text-left group">
   <div class="flex items-center gap-2">
     <img
-      src="logo.png"
+      src="IMG_1418.png"
       alt="Home"
       class="w-10 h-10 rounded xl object-contain border border-slate-600 bg-slate-900 p-1
              group-hover:opacity-90 transition"
