--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <button id="homeBtn" class="text-left group">
   <div class="flex items-center gap-2">
     <img
-      src="IMG_1418.png"
+      src="./IMG_1418.png"
       alt="Home"
-      class="w-10 h-10 rounded xl object-contain border border-slate-600 bg-slate-900 p-1
+      class="w-40 h-15 rounded xl object-contain border border-slate-600 bg-slate-900 p-1
              group-hover:opacity-90 transition"
     />
       <div class="text-2xl font-black tracking-tight group-hover:opacity-90">Wine Storage Solution</div>
