--- a/index.html
+++ b/index.html
@@ -46,44 +46,44 @@
 
 <body class="text-slate-100 min-h-screen flex flex-col items-center">
 
-  <div class="w-full max-w-3xl px-4 pt-6">
-    <div class="flex items-center justify-between gap-3">
-      <button id="homeBtn" class="text-left group">
-  <div class="flex items-center gap-2">
-    <img
-      src="./IMG_1418.png"
-      alt="Home"
-      class="w-40 h-15 rounded xl object-contain border border-slate-600 bg-slate-900 p-1
-             group-hover:opacity-90 transition"
-    />
-      <div class="text-2xl font-black tracking-tight group-hover:opacity-90">Wine Storage Solution</div>
-      <div class="text-slate-400 text-sm mt-0.5">Less time searching, more time drinking.</div>
-    </div>
-  </div>
-</button>
-
-      <div class="flex items-center gap-2">
-        <button id="addWineBtn" class="bg-slate-800 hover:bg-slate-700 border border-slate-700 px-3 py-2 rounded-lg text-sm font-semibold">
-          Add Wine
-        </button>
-        <button id="challengeBtn" class="bg-blue-600 hover:bg-blue-500 px-3 py-2 rounded-lg text-sm font-semibold">
-          Challenge Bottle
-        </button>
+ <div class="w-full max-w-3xl px-4 pt-6">
+  <div class="flex items-center justify-between gap-3">
+    <button id="homeBtn" class="text-left group flex items-center gap-3 min-w-0">
+      <img
+        src="IMG_1418.PNG"
+        alt="Home"
+        class="w-10 h-10 rounded-xl object-contain border border-slate-600 bg-slate-900 p-1
+               group-hover:opacity-90 transition shrink-0"
+        onerror="this.style.display='none'"
+      />
+      <div class="min-w-0">
+        <div class="text-2xl font-black tracking-tight group-hover:opacity-90 truncate">Wine Inventory</div>
+        <div class="text-slate-400 text-sm mt-0.5 truncate">Storage-first lookup + edits</div>
       </div>
-    </div>
+    </button>
 
-    <div class="flex gap-2 mt-4">
-      <button id="tabSearch" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm tab-active">Search</button>
-      <button id="tabAll" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm">All Wines</button>
-      <button id="tabConflicts" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm">Conflicts</button>
-    </div>
-
-    <div id="searchBarWrap" class="mt-4">
-      <input id="searchInput" placeholder="Search wine or producer..."
-        class="w-full p-3 rounded-lg bg-slate-900/70 border border-slate-700 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-      <p class="text-xs text-slate-500 mt-2">No cards show until you type.</p>
+    <div class="flex items-center gap-2 shrink-0">
+      <button id="addWineBtn" class="bg-slate-800 hover:bg-slate-700 border border-slate-700 px-3 py-2 rounded-lg text-sm font-semibold">
+        Add Wine
+      </button>
+      <button id="challengeBtn" class="bg-blue-600 hover:bg-blue-500 px-3 py-2 rounded-lg text-sm font-semibold">
+        Challenge
+      </button>
     </div>
   </div>
+
+  <div class="flex gap-2 mt-4">
+    <button id="tabSearch" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm tab-active">Search</button>
+    <button id="tabAll" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm">All Wines</button>
+    <button id="tabConflicts" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm">Conflicts</button>
+  </div>
+
+  <div id="searchBarWrap" class="mt-4">
+    <input id="searchInput" placeholder="Search wine or producer..."
+      class="w-full p-3 rounded-lg bg-slate-900/70 border border-slate-700 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+    <p class="text-xs text-slate-500 mt-2">No cards show until you type.</p>
+  </div>
+</div>
 
   <!-- Search results cards -->
   <div id="searchResults" class="w-full max-w-3xl px-4 mt-5 space-y-3"></div>
