--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <img
         src="IMG_1418.PNG"
         alt="Home"
-        class="w-10 h-10 rounded-xl object-contain border border-slate-600 bg-slate-900 p-1
-               group-hover:opacity-90 transition shrink-0"
+        class="w-100 h-20 rounded-xl object-contain 
+        drop-shadow-md hover:drop-shadow-lg transition"
         onerror="this.style.display='none'"
       />
       <div class="min-w-0">
