--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       <img
         src="IMG_1418.PNG"
         alt="Home"
-        class="w-100 h-20 rounded-xl object-contain 
+        class="w-180 h-40 rounded-xl object-contain 
         drop-shadow-md hover:drop-shadow-lg transition"
         onerror="this.style.display='none'"
       />
       <div class="min-w-0">
-        <div class="text-2xl font-black tracking-tight group-hover:opacity-90 truncate">Wine Inventory</div>
-        <div class="text-slate-400 text-sm mt-0.5 truncate">Storage-first lookup + edits</div>
+        <div class="text-3xl font-black tracking-tight group-hover:opacity-90 truncate">Wine Storage Map</div>
+        <div class="text-slate-400 text-sm mt-0.5 truncate">Less searching, more sipping. </div>
       </div>
     </button>
 
