--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background:
         radial-gradient(1200px 600px at 20% 0%, rgba(128, 0, 32, .22), transparent 60%),
         radial-gradient(1000px 500px at 80% 10%, rgba(128, 0, 32, .16), transparent 55%),
-        linear-gradient(180deg, #0b1220, #050814);
+        linear-gradient(180deg, #200b0b, #050814);
     }
     .tab-active{ background: rgba(59,130,246,.22); border-color: rgba(59,130,246,.55); }
     .pill{
