--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         drop-shadow-md hover:drop-shadow-lg transition"
         onerror="this.style.display='none'"
       />
-      <div class="min-w-0">
+      <div class="min-w-0 mt-4">
         <div class="text-3xl font-black tracking-tight group-hover:opacity-90 truncate">Wine Storage Map</div>
         <div class="text-slate-400 text-sm mt-0.5 truncate">Less searching, more sipping. </div>
       </div>
