--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
         drop-shadow-md hover:drop-shadow-lg transition"
         onerror="this.style.display='none'"
       />
-      <div class="min-w-0 mt-4">
+      <div class="min-w-0 mt-40">
         <div class="text-3xl font-black tracking-tight group-hover:opacity-90 truncate">Wine Storage Map</div>
-        <div class="text-slate-400 text-sm mt-0.5 truncate">Less searching, more sipping. </div>
+        <div class="text-slate-400 text-sm mt-0.5 truncate">Less searching, more sipping. </div>-
       </div>
     </button>
 
     <div class="flex items-center gap-2 shrink-0">
       <button id="addWineBtn" class="bg-slate-800 hover:bg-slate-700 border border-slate-700 px-3 py-2 rounded-lg text-sm font-semibold">
-        Add Wine
+        Add New Wine
       </button>
       <button id="challengeBtn" class="bg-blue-600 hover:bg-blue-500 px-3 py-2 rounded-lg text-sm font-semibold">
-        Challenge
+        Feeling Lucky?
       </button>
     </div>
   </div>
