--- a/index.html
+++ b/index.html
@@ -45,45 +45,58 @@
 </head>
 
 <body class="text-slate-100 min-h-screen flex flex-col items-center">
+<div class="w-full max-w-3xl px-4 pt-6">
 
- <div class="w-full max-w-3xl px-4 pt-6">
-  <div class="flex items-center justify-between gap-3">
-    <button id="homeBtn" class="text-left group flex items-center gap-3 min-w-0">
-      <img
-        src="IMG_1418.PNG"
-        alt="Home"
-        class="w-180 h-40 rounded-xl object-contain 
-        drop-shadow-md hover:drop-shadow-lg transition"
-        onerror="this.style.display='none'"
-      />
-      <div class="min-w-0 mt-40">
-        <div class="text-3xl font-black tracking-tight group-hover:opacity-90 truncate">Wine Storage Map</div>
-        <div class="text-slate-400 text-sm mt-0.5 truncate">Less searching, more sipping. </div>-
-      </div>
-    </button>
-
-    <div class="flex items-center gap-2 shrink-0">
-      <button id="addWineBtn" class="bg-slate-800 hover:bg-slate-700 border border-slate-700 px-3 py-2 rounded-lg text-sm font-semibold">
-        Add New Wine
-      </button>
-      <button id="challengeBtn" class="bg-blue-600 hover:bg-blue-500 px-3 py-2 rounded-lg text-sm font-semibold">
-        Feeling Lucky?
-      </button>
+  <!-- Row 1: Logo + Title -->
+  <div class="flex items-center gap-3">
+    <img
+      src="./IMG_1418.PNG"
+      alt="Home"
+      class="w-12 h-12 rounded-lg object-contain shrink-0 drop-shadow-md"
+      onerror="this.style.display='none'"
+    />
+    <div class="text-3xl font-black tracking-tight leading-tight">
+      Porters Wine Storage
     </div>
   </div>
 
+  <!-- Row 2: Subtitle -->
+  <div class="text-slate-400 text-sm mt-1">
+    Less searching, more sipping.
+  </div>
+
+  <!-- Row 3: Tabs -->
   <div class="flex gap-2 mt-4">
     <button id="tabSearch" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm tab-active">Search</button>
     <button id="tabAll" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm">All Wines</button>
     <button id="tabConflicts" class="flex-1 border border-slate-700 rounded-lg px-3 py-2 text-sm">Conflicts</button>
   </div>
 
+  <!-- Row 4: Search -->
   <div id="searchBarWrap" class="mt-4">
-    <input id="searchInput" placeholder="Search wine or producer..."
-      class="w-full p-3 rounded-lg bg-slate-900/70 border border-slate-700 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+    <input
+      id="searchInput"
+      placeholder="Search wine or producer..."
+      class="w-full p-3 rounded-lg bg-slate-900/70 border border-slate-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
+    />
     <p class="text-xs text-slate-500 mt-2">No cards show until you type.</p>
+
+    <!-- Row 5: Buttons under search (only affects header layout, not cards) -->
+    <div class="flex gap-2 mt-3">
+      <button id="addWineBtn"
+        class="flex-1 bg-slate-800 hover:bg-slate-700 border border-slate-700 px-3 py-2 rounded-lg text-sm font-semibold">
+        Add New Wine
+      </button>
+
+      <button id="challengeBtn"
+        class="flex-1 bg-blue-600 hover:bg-blue-500 px-3 py-2 rounded-lg text-sm font-semibold">
+        Feeling Lucky?
+      </button>
+    </div>
   </div>
+
 </div>
+
 
   <!-- Search results cards -->
   <div id="searchResults" class="w-full max-w-3xl px-4 mt-5 space-y-3"></div>
