--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 
   <!-- Row 1: Logo + Title -->
   <div class="flex items-center gap-3">
-    <img
-      src="./IMG_1418.PNG"
-      alt="Home"
-      class="w-350 h-180 rounded-lg object-contain shrink-0 drop-shadow-md"
-      onerror="this.style.display='none'"
-    />
+      <img
+  src="./IMG_1418.PNG"
+  alt="Home"
+  class="w-20 h-20 md:w-24 md:h-24 rounded-xl object-contain shrink-0
+         drop-shadow-md"
+/>
     <div class="text-3xl font-black tracking-tight leading-tight">
       Porters Wine Storage
     </div>
