--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 <div class="w-full max-w-3xl px-4 pt-6">
 
   <!-- Row 1: Logo + Title -->
-  <div class="flex items-center gap-3">
-      <img
+<img
   src="./IMG_1418.PNG"
   alt="Home"
-  class="w-20 h-20 md:w-24 md:h-24 rounded-xl object-contain shrink-0
-         drop-shadow-md"
+  class="w-[96px] h-[96px] md:w-[120px] md:h-[120px]
+         object-contain shrink-0 drop-shadow-md"
 />
+
     <div class="text-3xl font-black tracking-tight leading-tight">
       Porters Wine Storage
     </div>
