--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
   <!-- Row 1: Logo + Title -->
 <img
-  src="./IMG_1418.PNG"
+  src="IMG_1418.PNG"
   alt="Home"
-  class="w-[96px] h-[96px] md:w-[120px] md:h-[120px]
+  class="w-[960px] h-[906px] md:w-[120px] md:h-[120px]
          object-contain shrink-0 drop-shadow-md"
 />
 
