--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
          object-contain shrink-0 drop-shadow-md"
 />
 
-    <div class="text-3xl font-black tracking-tight leading-tight">
+    <div class="text-3xl font-black tracking-tight text-center leading-tight">
       Porters Wine Storage
     </div>
   </div>
 
   <!-- Row 2: Subtitle -->
-  <div class="text-slate-400 text-sm mt-1">
+  <div class="text-slate-400 text-center text-sm mt-1">
     Less searching, more sipping.
   </div>
 
