--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
 <div class="w-full max-w-3xl px-4 pt-6">
 
   <!-- Row 1: Logo + Title -->
-<img
+<div class="flex flex-col items-center text-center">
+  <img
   src="IMG_1418.PNG"
   alt="Home"
-  class="w-[960px] h-[906px] md:w-[120px] md:h-[120px]
+  class="w-[300px] h-[300px] md:w-[120px] md:h-[120px]
          object-contain shrink-0 drop-shadow-md"
 />
 
-    <div class="text-3xl font-black tracking-tight text-center leading-tight">
+    <div class="text-3xl font-black text-center">
       Porters Wine Storage
     </div>
   </div>
