--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   src="IMG_1418.PNG"
   alt="Home"
   class="w-[300px] h-[300px] md:w-[120px] md:h-[120px]
-         object-contain shrink-0 drop-shadow-md"
+         object-fill shrink-0 drop-shadow-md"
 />
 
     <div class="text-3xl font-black text-center">
