--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
   <img
   src="IMG_1418.PNG"
   alt="Home"
-  class="w-[300px] h-[300px] md:w-[120px] md:h-[120px]
-         object-fill shrink-0 drop-shadow-md"
+  class="w-[300px] h-[300px]"
 />
 
     <div class="text-3xl font-black text-center">
