--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <img
   src="IMG_1418.PNG"
   alt="Home"
-  class="w-[300px] h-[300px]"
+  class="w-[300px] h-[300px] object-fill"
 />
 
     <div class="text-3xl font-black text-center">
